# snapcastr

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml.example  pyproject.toml  requirements.txt  setup.py
snapcastr/: __init__.py  snapcastr.py  snapcastrd.py
snapcastr/static/: style.css
snapcastr/templates/: base.html  clients.html  groups.html  streams.html  zones.html
